k8s/monitor-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monitor-bot
  name: monitor-bot
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: monitor-bot
  template:
    metadata:
      labels:
        app: monitor-bot
    spec:
      containers:
      - image: trainconnectionprediction/tcp:monitor_bot
        imagePullPolicy: Always
        name: tcp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/config
          name: config-pvc-storage
        - mountPath: /mnt/cache
          name: cache-pvc-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-pvc-storage
        persistentVolumeClaim:
          claimName: config-pvc
      - name: cache-pvc-storage
        persistentVolumeClaim:
          claimName: cache-pvc
