k8s/plan-crawler-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plan-crawler
  name: plan-crawler
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: plan-crawler
  template:
    metadata:
      labels:
        app: plan-crawler
    spec:
      containers:
      - image: trainconnectionprediction/tcp:plan_crawler
        imagePullPolicy: Always
        name: tcp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/config
          name: config-pvc-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-pvc-storage
        persistentVolumeClaim:
          claimName: config-pvc
