k8s/realtimeparser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: realtimeparser
  name: realtimeparser
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: realtimeparser
  template:
    metadata:
      labels:
        app: realtimeparser
    spec:
      containers:
      - image: trainconnectionprediction/tcp:realtimeparser
        imagePullPolicy: Always
        name: tcp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: tz-berlin # set timezone to CEST
          mountPath: /etc/localtime
        - mountPath: /mnt/config
          name: config-pvc-storage
        - mountPath: /usr/src/app/cache
          name: cache-pvc-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-pvc-storage
        persistentVolumeClaim:
          claimName: config-pvc
      - name: cache-pvc-storage
        persistentVolumeClaim:
          claimName: cache-pvc
      - name: tz-berlin  # set timezone to CEST
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
