k8s/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver
  name: webserver
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webserver
  strategy:
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 33%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - image: trainconnectionprediction/webserver:latest
        imagePullPolicy: Always
        name: webserver
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: tz-berlin # set timezone to CEST
          mountPath: /etc/localtime
        - mountPath: /mnt/config
          name: config-pvc-storage
        - mountPath: /usr/src/app/cache
          name: cache-pvc-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-pvc-storage
        persistentVolumeClaim:
          claimName: config-pvc
      - name: cache-pvc-storage
        persistentVolumeClaim:
          claimName: cache-pvc
      - name: tz-berlin  # set timezone to CEST
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
