k8s/marcs_escaperoom.yaml
apiVersion: v1
kind: Service
metadata:
  name: marcs-escaperoom
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: marcs-escaperoom
subsets:
- addresses:
  - ip: 10.20.30.40
  ports:
  - name: http
    port: 80
    protocol: TCP
