k8s/sfz-nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfz-nextcloud
spec:
  ports:
  - port: 443
    targetPort: 8080
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sfz-nextcloud
subsets:
- addresses:
  - ip: 192.168.178.24
  ports:
  - port: 8080
