k8s/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver
  ports:
    - port: 5000 # Default port for image
---
kind: Service
apiVersion: v1
metadata:
  name: next-webserver-service
spec:
  selector:
    app: next-webserver
  ports:
    - port: 5000 # Default port for image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress-https
  annotations:
    # Add the following line (staging first for testing, then apply the prod issuer)
    cert-manager.io/cluster-issuer: letsencrypt-prod # letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true" # !!!This seems to be really important!!!

    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host ~ "qkhrecvu4nfgijjt.myfritz.net")
      {
        rewrite ^ https://bahnvorhersage.de$request_uri permanent;
      }
      if ($host ~ "srotr07ii29e1ir7.myfritz.net")
      {
        rewrite ^ https://bahnvorhersage.de$request_uri permanent;
      }
      set $redirect_next_tcp 0;
      if ($host ~ "next.trainconnectionprediction.de") {
        set $redirect_next_tcp 1;
      }
      location /.well-known/acme-challenge/ {
        set $redirect_next_tcp 0;
      }
      if ($redirect_next_tcp = 1) {
        rewrite ^ https://next.bahnvorhersage.de$request_uri permanent;
      }

spec:
  tls:
  - hosts:
    - bahnvorhersage.de
    - next.bahnvorhersage.de
    - trainconnectionprediction.de
    - next.trainconnectionprediction.de
    - edury.trainconnectionprediction.de
    - nextcloud.sfz-eningen.de
    - overleaf.marcpanse.de
    secretName: default-tls-secret
  rules:
  - host: "bahnvorhersage.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webserver-service
              port:
                number: 5000
  - host: "next.bahnvorhersage.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: next-webserver-service
              port:
                number: 5000
  - host: "trainconnectionprediction.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webserver-service
              port:
                number: 5000
  - host: "next.trainconnectionprediction.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: next-webserver-service
              port:
                number: 5000
  - host: "qkhrecvu4nfgijjt.myfritz.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webserver-service
              port:
                number: 5000
  - host: "srotr07ii29e1ir7.myfritz.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webserver-service
              port:
                number: 5000
  - host: "edury.trainconnectionprediction.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: edury-decks-service
              port:
                number: 80
  - host: "hidden-mystery.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: marcs-escaperoom
              port:
                number: 80
  - host: "hiddenmystery.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: marcs-escaperoom
              port:
                number: 80
  - host: "marcpanse.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: marcs-escaperoom
              port:
                number: 80
  - host: "overleaf.marcpanse.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-overleaf
              port:
                number: 80
